--- a/icons/expand/index.html
+++ b/icons/expand/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <title>Rivet icons</title>
+  <title>expand | Rivet icons</title>
   <link rel="stylesheet" href="https://assets.uits.iu.edu/css/rivet/1.8.1/rivet.min.css">
   <style>
   :root {
@@ -714,8 +714,42 @@ window.customElements.define(prefix, class RivetIcon extends HTMLElement {
 
   <div class="rvt-container rvt-container--junior rvt-container--center">
     
-<h1 class="rvt-ts-46 rvt-text-bold">Rivet icons</h1>
-<p class="rvt-ts-20 rvt-m-top-none">Icons for the <a href="https://rivet.iu.edu/">Rivet Design System</a></p>
+<div class="rvt-m-bottom-lg">
+  <a href="/">Rivet icons</a>
+
+  <h1 class="rvt-ts-46 rvt-text-bold rvt-m-top-xs">expand</h1>
+  <rvt-icon icon="expand"></rvt-icon>
+
+  <h2 class="rvt-ts-sm rvt-text-bold rvt-m-top-lg">Option 1</h2>
+  <p>Use the custom element. This is essentially a shorthand for Option 2.</p>
+  
+  <pre><code class="ri-code-block">&lt;rvt-icon icon=&quot;expand&quot;&gt;&lt;/rvt-icon&gt;</code></pre>
+
+  <h2 class="rvt-ts-sm rvt-text-bold rvt-m-top-lg">Option 2</h2>
+  
+  <pre><code class="ri-code-block">&lt;span class=&quot;rvt-icon rvt-icon--expand&quot;&gt;
+  &lt;svg&gt;
+    &lt;use href=&quot;#rvt-icon&quot;&gt;&lt;/use&gt;
+  &lt;/svg&gt;
+&lt;/span&gt;</code></pre>
+
+  <h2 class="rvt-ts-sm rvt-text-bold rvt-m-top-lg">Option 3</h2>
+  <p></p>
+  
+  <pre><code class="ri-code-block">&lt;span class=&quot;rvt-icon&quot;&gt;
+  &lt;svg&gt;
+    &lt;use href=&quot;#rvt-icon-expand&quot;&gt;&lt;/use&gt;
+  &lt;/svg&gt;
+&lt;/span&gt;</code></pre>
+
+  <h2 class="rvt-ts-sm rvt-text-bold rvt-m-top-lg">Option 4</h2>
+  <p>Copy or download the SVG.</p>
+  <pre><code class="ri-code-block">&lt;svg xmlns=&quot;http://www.w3.org/2000/svg&quot; width=&quot;16&quot; height=&quot;16&quot; viewBox=&quot;0 0 16 16&quot;&gt;
+  &lt;path fill=&quot;currentColor&quot; d=&quot;M14.86,7.09A1.08,1.08,0,0,0,16,5.94V1.14A1.08,1.08,0,0,0,14.86,0h-4.8A1.08,1.08,0,0,0,8.91,1.14a1.09,1.09,0,0,0,1.15,1.15h2L8,6.4,3.89,2.29H5.94A1.09,1.09,0,0,0,7.09,1.14,1.08,1.08,0,0,0,5.94,0H1.14A1.08,1.08,0,0,0,0,1.14v4.8A1.08,1.08,0,0,0,1.14,7.09,1.09,1.09,0,0,0,2.29,5.94V3.89L6.4,8,2.29,12.11v-2A1.09,1.09,0,0,0,1.14,8.91,1.08,1.08,0,0,0,0,10.06v4.8A1.08,1.08,0,0,0,1.14,16h4.8a1.15,1.15,0,1,0,0-2.29H3.89L8,9.6l4.11,4.11h-2a1.15,1.15,0,1,0,0,2.29h4.8A1.08,1.08,0,0,0,16,14.86v-4.8a1.15,1.15,0,1,0-2.29,0v2L9.6,8l4.11-4.11V5.94A1.16,1.16,0,0,0,14.86,7.09Z&quot;/&gt;
+&lt;/svg&gt;
+</code></pre>
+  <a class="button button--secondary" download href="icons/rvt-icon-expand.svg">Download SVG<span class="rvt-sr-only">, expand icon</span></a>
+</div>
 
     <h2 class="rvt-ts-sm rvt-text-bold rvt-m-top-lg rvt-p-top-lg rvt-border-top">Icons</h2>
 <ul class="ri-list rvt-m-top-sm">
