--- a/icons/home/index.html
+++ b/icons/home/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <title>Rivet icons</title>
+  <title>home | Rivet icons</title>
   <link rel="stylesheet" href="https://assets.uits.iu.edu/css/rivet/1.8.1/rivet.min.css">
   <style>
   :root {
@@ -714,8 +714,42 @@ window.customElements.define(prefix, class RivetIcon extends HTMLElement {
 
   <div class="rvt-container rvt-container--junior rvt-container--center">
     
-<h1 class="rvt-ts-46 rvt-text-bold">Rivet icons</h1>
-<p class="rvt-ts-20 rvt-m-top-none">Icons for the <a href="https://rivet.iu.edu/">Rivet Design System</a></p>
+<div class="rvt-m-bottom-lg">
+  <a href="/">Rivet icons</a>
+
+  <h1 class="rvt-ts-46 rvt-text-bold rvt-m-top-xs">home</h1>
+  <rvt-icon icon="home"></rvt-icon>
+
+  <h2 class="rvt-ts-sm rvt-text-bold rvt-m-top-lg">Option 1</h2>
+  <p>Use the custom element. This is essentially a shorthand for Option 2.</p>
+  
+  <pre><code class="ri-code-block">&lt;rvt-icon icon=&quot;home&quot;&gt;&lt;/rvt-icon&gt;</code></pre>
+
+  <h2 class="rvt-ts-sm rvt-text-bold rvt-m-top-lg">Option 2</h2>
+  
+  <pre><code class="ri-code-block">&lt;span class=&quot;rvt-icon rvt-icon--home&quot;&gt;
+  &lt;svg&gt;
+    &lt;use href=&quot;#rvt-icon&quot;&gt;&lt;/use&gt;
+  &lt;/svg&gt;
+&lt;/span&gt;</code></pre>
+
+  <h2 class="rvt-ts-sm rvt-text-bold rvt-m-top-lg">Option 3</h2>
+  <p></p>
+  
+  <pre><code class="ri-code-block">&lt;span class=&quot;rvt-icon&quot;&gt;
+  &lt;svg&gt;
+    &lt;use href=&quot;#rvt-icon-home&quot;&gt;&lt;/use&gt;
+  &lt;/svg&gt;
+&lt;/span&gt;</code></pre>
+
+  <h2 class="rvt-ts-sm rvt-text-bold rvt-m-top-lg">Option 4</h2>
+  <p>Copy or download the SVG.</p>
+  <pre><code class="ri-code-block">&lt;svg xmlns=&quot;http://www.w3.org/2000/svg&quot; width=&quot;16&quot; height=&quot;16&quot; viewBox=&quot;0 0 16 16&quot;&gt;
+  &lt;path fill=&quot;currentColor&quot; d=&quot;M15.6,6.4l-7-5.19a.76.76,0,0,0-.19-.12A1,1,0,0,0,8,1H8a1,1,0,0,0-.42.09.76.76,0,0,0-.19.12L.4,6.4a1,1,0,0,0-.4.8,1,1,0,0,0,.2.6A1,1,0,0,0,1.6,8L2,7.7V14a1,1,0,0,0,1,1H13a1,1,0,0,0,1-1V7.7l.4.3a1,1,0,0,0,.6.2,1,1,0,0,0,.6-1.8ZM12,13H9V9H7v4H4V6.22l4-3,4,3Z&quot;/&gt;
+&lt;/svg&gt;
+</code></pre>
+  <a class="button button--secondary" download href="icons/rvt-icon-home.svg">Download SVG<span class="rvt-sr-only">, home icon</span></a>
+</div>
 
     <h2 class="rvt-ts-sm rvt-text-bold rvt-m-top-lg rvt-p-top-lg rvt-border-top">Icons</h2>
 <ul class="ri-list rvt-m-top-sm">
