--- a/icons/ordered-list/index.html
+++ b/icons/ordered-list/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <title>Rivet icons</title>
+  <title>ordered-list | Rivet icons</title>
   <link rel="stylesheet" href="https://assets.uits.iu.edu/css/rivet/1.8.1/rivet.min.css">
   <style>
   :root {
@@ -714,8 +714,47 @@ window.customElements.define(prefix, class RivetIcon extends HTMLElement {
 
   <div class="rvt-container rvt-container--junior rvt-container--center">
     
-<h1 class="rvt-ts-46 rvt-text-bold">Rivet icons</h1>
-<p class="rvt-ts-20 rvt-m-top-none">Icons for the <a href="https://rivet.iu.edu/">Rivet Design System</a></p>
+<div class="rvt-m-bottom-lg">
+  <a href="/">Rivet icons</a>
+
+  <h1 class="rvt-ts-46 rvt-text-bold rvt-m-top-xs">ordered-list</h1>
+  <rvt-icon icon="ordered-list"></rvt-icon>
+
+  <h2 class="rvt-ts-sm rvt-text-bold rvt-m-top-lg">Option 1</h2>
+  <p>Use the custom element. This is essentially a shorthand for Option 2.</p>
+  
+  <pre><code class="ri-code-block">&lt;rvt-icon icon=&quot;ordered-list&quot;&gt;&lt;/rvt-icon&gt;</code></pre>
+
+  <h2 class="rvt-ts-sm rvt-text-bold rvt-m-top-lg">Option 2</h2>
+  
+  <pre><code class="ri-code-block">&lt;span class=&quot;rvt-icon rvt-icon--ordered-list&quot;&gt;
+  &lt;svg&gt;
+    &lt;use href=&quot;#rvt-icon&quot;&gt;&lt;/use&gt;
+  &lt;/svg&gt;
+&lt;/span&gt;</code></pre>
+
+  <h2 class="rvt-ts-sm rvt-text-bold rvt-m-top-lg">Option 3</h2>
+  <p></p>
+  
+  <pre><code class="ri-code-block">&lt;span class=&quot;rvt-icon&quot;&gt;
+  &lt;svg&gt;
+    &lt;use href=&quot;#rvt-icon-ordered-list&quot;&gt;&lt;/use&gt;
+  &lt;/svg&gt;
+&lt;/span&gt;</code></pre>
+
+  <h2 class="rvt-ts-sm rvt-text-bold rvt-m-top-lg">Option 4</h2>
+  <p>Copy or download the SVG.</p>
+  <pre><code class="ri-code-block">&lt;svg xmlns=&quot;http://www.w3.org/2000/svg&quot; width=&quot;16&quot; height=&quot;16&quot; viewBox=&quot;0 0 16 16&quot;&gt;
+  &lt;g fill=&quot;currentColor&quot;&gt;
+    &lt;path d=&quot;M14.66,5H7.44a1.13,1.13,0,0,1-1.2-1.2,1.14,1.14,0,0,1,1.2-1.21h7.34A1.15,1.15,0,0,1,16,3.77,1.24,1.24,0,0,1,14.66,5Z&quot;/&gt;
+    &lt;path d=&quot;M0,7V5.93H1.07V2.2A3.5,3.5,0,0,1,0,2.44V1.36A1.68,1.68,0,0,0,1.07,1h1.2V5.93h1V7Z&quot;/&gt;
+    &lt;path d=&quot;M14.66,12.79H7.44a1.13,1.13,0,0,1-1.2-1.2,1.14,1.14,0,0,1,1.2-1.21h7.34A1.14,1.14,0,0,1,16,11.59,1.24,1.24,0,0,1,14.66,12.79Z&quot;/&gt;
+    &lt;path d=&quot;M0,14.71v-.12c0-.84.24-1.68,1.8-2.76,1-.6,1.32-.85,1.32-1.45a.69.69,0,0,0-.72-.72H2.27A1.48,1.48,0,0,0,1,10.5L0,9.9A2.57,2.57,0,0,1,2.27,8.58c1.32,0,2.05.6,2.05,1.68,0,.72-.24,1.21-1.33,1.93-.84.6-1.44,1-1.44,1.32H4.44v1.08Z&quot;/&gt;
+  &lt;/g&gt;
+&lt;/svg&gt;
+</code></pre>
+  <a class="button button--secondary" download href="icons/rvt-icon-ordered-list.svg">Download SVG<span class="rvt-sr-only">, ordered list icon</span></a>
+</div>
 
     <h2 class="rvt-ts-sm rvt-text-bold rvt-m-top-lg rvt-p-top-lg rvt-border-top">Icons</h2>
 <ul class="ri-list rvt-m-top-sm">
