--- a/icons/users-group-solid/index.html
+++ b/icons/users-group-solid/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <title>Rivet icons</title>
+  <title>users-group-solid | Rivet icons</title>
   <link rel="stylesheet" href="https://assets.uits.iu.edu/css/rivet/1.8.1/rivet.min.css">
   <style>
   :root {
@@ -714,8 +714,49 @@ window.customElements.define(prefix, class RivetIcon extends HTMLElement {
 
   <div class="rvt-container rvt-container--junior rvt-container--center">
     
-<h1 class="rvt-ts-46 rvt-text-bold">Rivet icons</h1>
-<p class="rvt-ts-20 rvt-m-top-none">Icons for the <a href="https://rivet.iu.edu/">Rivet Design System</a></p>
+<div class="rvt-m-bottom-lg">
+  <a href="/">Rivet icons</a>
+
+  <h1 class="rvt-ts-46 rvt-text-bold rvt-m-top-xs">users-group-solid</h1>
+  <rvt-icon icon="users-group-solid"></rvt-icon>
+
+  <h2 class="rvt-ts-sm rvt-text-bold rvt-m-top-lg">Option 1</h2>
+  <p>Use the custom element. This is essentially a shorthand for Option 2.</p>
+  
+  <pre><code class="ri-code-block">&lt;rvt-icon icon=&quot;users-group-solid&quot;&gt;&lt;/rvt-icon&gt;</code></pre>
+
+  <h2 class="rvt-ts-sm rvt-text-bold rvt-m-top-lg">Option 2</h2>
+  
+  <pre><code class="ri-code-block">&lt;span class=&quot;rvt-icon rvt-icon--users-group-solid&quot;&gt;
+  &lt;svg&gt;
+    &lt;use href=&quot;#rvt-icon&quot;&gt;&lt;/use&gt;
+  &lt;/svg&gt;
+&lt;/span&gt;</code></pre>
+
+  <h2 class="rvt-ts-sm rvt-text-bold rvt-m-top-lg">Option 3</h2>
+  <p></p>
+  
+  <pre><code class="ri-code-block">&lt;span class=&quot;rvt-icon&quot;&gt;
+  &lt;svg&gt;
+    &lt;use href=&quot;#rvt-icon-users-group-solid&quot;&gt;&lt;/use&gt;
+  &lt;/svg&gt;
+&lt;/span&gt;</code></pre>
+
+  <h2 class="rvt-ts-sm rvt-text-bold rvt-m-top-lg">Option 4</h2>
+  <p>Copy or download the SVG.</p>
+  <pre><code class="ri-code-block">&lt;svg xmlns=&quot;http://www.w3.org/2000/svg&quot; width=&quot;16&quot; height=&quot;16&quot; viewBox=&quot;0 0 16 16&quot;&gt;
+  &lt;g fill=&quot;currentColor&quot;&gt;
+    &lt;circle cx=&quot;12&quot; cy=&quot;2&quot; r=&quot;2&quot;/&gt;
+    &lt;circle cx=&quot;4&quot; cy=&quot;2&quot; r=&quot;2&quot;/&gt;
+    &lt;circle cx=&quot;8&quot; cy=&quot;5&quot; r=&quot;2&quot;/&gt;
+    &lt;path d=&quot;M11,16H5a1,1,0,0,1-1-1V12A4,4,0,0,1,8,8H8a4,4,0,0,1,4,4v3A1,1,0,0,1,11,16Z&quot;/&gt;
+    &lt;path d=&quot;M4.5,5a3.44,3.44,0,0,0-2.41.55A4.65,4.65,0,0,0,0,9.53V12a1,1,0,0,0,1,1H2.5V12A5.49,5.49,0,0,1,5.31,7.21,3.47,3.47,0,0,1,4.5,5Z&quot;/&gt;
+    &lt;path d=&quot;M11.5,5a3.44,3.44,0,0,1,2.41.55A4.65,4.65,0,0,1,16,9.53V12a1,1,0,0,1-1,1H13.5V12a5.49,5.49,0,0,0-2.81-4.79A3.47,3.47,0,0,0,11.5,5Z&quot;/&gt;
+  &lt;/g&gt;
+&lt;/svg&gt;
+</code></pre>
+  <a class="button button--secondary" download href="icons/rvt-icon-users-group-solid.svg">Download SVG<span class="rvt-sr-only">, users group solid icon</span></a>
+</div>
 
     <h2 class="rvt-ts-sm rvt-text-bold rvt-m-top-lg rvt-p-top-lg rvt-border-top">Icons</h2>
 <ul class="ri-list rvt-m-top-sm">
