--- a/icons/circle-solid/index.html
+++ b/icons/circle-solid/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <title>Rivet icons</title>
+  <title>circle-solid | Rivet icons</title>
   <link rel="stylesheet" href="https://assets.uits.iu.edu/css/rivet/1.8.1/rivet.min.css">
   <style>
   :root {
@@ -714,8 +714,42 @@ window.customElements.define(prefix, class RivetIcon extends HTMLElement {
 
   <div class="rvt-container rvt-container--junior rvt-container--center">
     
-<h1 class="rvt-ts-46 rvt-text-bold">Rivet icons</h1>
-<p class="rvt-ts-20 rvt-m-top-none">Icons for the <a href="https://rivet.iu.edu/">Rivet Design System</a></p>
+<div class="rvt-m-bottom-lg">
+  <a href="/">Rivet icons</a>
+
+  <h1 class="rvt-ts-46 rvt-text-bold rvt-m-top-xs">circle-solid</h1>
+  <rvt-icon icon="circle-solid"></rvt-icon>
+
+  <h2 class="rvt-ts-sm rvt-text-bold rvt-m-top-lg">Option 1</h2>
+  <p>Use the custom element. This is essentially a shorthand for Option 2.</p>
+  
+  <pre><code class="ri-code-block">&lt;rvt-icon icon=&quot;circle-solid&quot;&gt;&lt;/rvt-icon&gt;</code></pre>
+
+  <h2 class="rvt-ts-sm rvt-text-bold rvt-m-top-lg">Option 2</h2>
+  
+  <pre><code class="ri-code-block">&lt;span class=&quot;rvt-icon rvt-icon--circle-solid&quot;&gt;
+  &lt;svg&gt;
+    &lt;use href=&quot;#rvt-icon&quot;&gt;&lt;/use&gt;
+  &lt;/svg&gt;
+&lt;/span&gt;</code></pre>
+
+  <h2 class="rvt-ts-sm rvt-text-bold rvt-m-top-lg">Option 3</h2>
+  <p></p>
+  
+  <pre><code class="ri-code-block">&lt;span class=&quot;rvt-icon&quot;&gt;
+  &lt;svg&gt;
+    &lt;use href=&quot;#rvt-icon-circle-solid&quot;&gt;&lt;/use&gt;
+  &lt;/svg&gt;
+&lt;/span&gt;</code></pre>
+
+  <h2 class="rvt-ts-sm rvt-text-bold rvt-m-top-lg">Option 4</h2>
+  <p>Copy or download the SVG.</p>
+  <pre><code class="ri-code-block">&lt;svg xmlns=&quot;http://www.w3.org/2000/svg&quot; width=&quot;16&quot; height=&quot;16&quot; viewBox=&quot;0 0 16 16&quot;&gt;
+  &lt;path fill=&quot;currentColor&quot; d=&quot;M16,8A8,8,0,1,1,8,0,8,8,0,0,1,16,8Z&quot;/&gt;
+&lt;/svg&gt;
+</code></pre>
+  <a class="button button--secondary" download href="icons/rvt-icon-circle-solid.svg">Download SVG<span class="rvt-sr-only">, circle solid icon</span></a>
+</div>
 
     <h2 class="rvt-ts-sm rvt-text-bold rvt-m-top-lg rvt-p-top-lg rvt-border-top">Icons</h2>
 <ul class="ri-list rvt-m-top-sm">
