--- a/icons/gears/index.html
+++ b/icons/gears/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <title>Rivet icons</title>
+  <title>gears | Rivet icons</title>
   <link rel="stylesheet" href="https://assets.uits.iu.edu/css/rivet/1.8.1/rivet.min.css">
   <style>
   :root {
@@ -714,8 +714,45 @@ window.customElements.define(prefix, class RivetIcon extends HTMLElement {
 
   <div class="rvt-container rvt-container--junior rvt-container--center">
     
-<h1 class="rvt-ts-46 rvt-text-bold">Rivet icons</h1>
-<p class="rvt-ts-20 rvt-m-top-none">Icons for the <a href="https://rivet.iu.edu/">Rivet Design System</a></p>
+<div class="rvt-m-bottom-lg">
+  <a href="/">Rivet icons</a>
+
+  <h1 class="rvt-ts-46 rvt-text-bold rvt-m-top-xs">gears</h1>
+  <rvt-icon icon="gears"></rvt-icon>
+
+  <h2 class="rvt-ts-sm rvt-text-bold rvt-m-top-lg">Option 1</h2>
+  <p>Use the custom element. This is essentially a shorthand for Option 2.</p>
+  
+  <pre><code class="ri-code-block">&lt;rvt-icon icon=&quot;gears&quot;&gt;&lt;/rvt-icon&gt;</code></pre>
+
+  <h2 class="rvt-ts-sm rvt-text-bold rvt-m-top-lg">Option 2</h2>
+  
+  <pre><code class="ri-code-block">&lt;span class=&quot;rvt-icon rvt-icon--gears&quot;&gt;
+  &lt;svg&gt;
+    &lt;use href=&quot;#rvt-icon&quot;&gt;&lt;/use&gt;
+  &lt;/svg&gt;
+&lt;/span&gt;</code></pre>
+
+  <h2 class="rvt-ts-sm rvt-text-bold rvt-m-top-lg">Option 3</h2>
+  <p></p>
+  
+  <pre><code class="ri-code-block">&lt;span class=&quot;rvt-icon&quot;&gt;
+  &lt;svg&gt;
+    &lt;use href=&quot;#rvt-icon-gears&quot;&gt;&lt;/use&gt;
+  &lt;/svg&gt;
+&lt;/span&gt;</code></pre>
+
+  <h2 class="rvt-ts-sm rvt-text-bold rvt-m-top-lg">Option 4</h2>
+  <p>Copy or download the SVG.</p>
+  <pre><code class="ri-code-block">&lt;svg xmlns=&quot;http://www.w3.org/2000/svg&quot; width=&quot;16&quot; height=&quot;16&quot; viewBox=&quot;0 0 16 16&quot;&gt;
+  &lt;g fill=&quot;currentColor&quot;&gt;
+    &lt;path d=&quot;M2.71,8.74,2.83,8l.74-.1,1-.14.06-.14,0,0-.58-.81L4,6.64a2,2,0,0,1-.33-.46l0,0h0a2,2,0,1,1,3.5-1.78l.46.35.18-.07.17-1,.13-.74.74-.1.25,0,.52-.72A5.22,5.22,0,0,0,8.47,1l-1.12.84a4,4,0,0,0-.46-.23,4,4,0,0,0-.56-.18L6.1.05a5.22,5.22,0,0,0-1.54,0l-.2,1.38a4,4,0,0,0-1,.43L2.2,1.06a5.22,5.22,0,0,0-1.08,1.1L2,3.28a3.58,3.58,0,0,0-.41,1L.17,4.53a5.22,5.22,0,0,0,0,1.54l1.38.2a4,4,0,0,0,.43,1L1.18,8.43A5.22,5.22,0,0,0,2.28,9.5l.39-.29C2.68,9.06,2.68,8.9,2.71,8.74Z&quot;/&gt;
+    &lt;path d=&quot;M14.16,11.1l1.61-.23a6.07,6.07,0,0,0,0-1.79l-1.6-.27a4.6,4.6,0,0,0-.47-1.19l1-1.3A6.07,6.07,0,0,0,13.46,5L12.13,6A4.16,4.16,0,0,0,11,5.47l-.23-1.61a6.07,6.07,0,0,0-1.79,0l-.27,1.6a4.6,4.6,0,0,0-1.19.47l-1.3-1A6.07,6.07,0,0,0,4.89,6.18L5.83,7.5a4.16,4.16,0,0,0-.51,1.18l-1.61.23a6.07,6.07,0,0,0,0,1.79l1.6.27a4.6,4.6,0,0,0,.47,1.19l-1,1.3A6.07,6.07,0,0,0,6,14.74l1.33-.94a4.16,4.16,0,0,0,1.18.51l.23,1.61a6.07,6.07,0,0,0,1.79,0l.27-1.6A4.6,4.6,0,0,0,12,13.87l1.3,1A6.07,6.07,0,0,0,14.6,13.6l-.94-1.33a4.15,4.15,0,0,0,.51-1.18Zm-2.32-.28a2.29,2.29,0,1,1-1.17-3A2.29,2.29,0,0,1,11.84,10.82Z&quot;/&gt;
+  &lt;/g&gt;
+&lt;/svg&gt;
+</code></pre>
+  <a class="button button--secondary" download href="icons/rvt-icon-gears.svg">Download SVG<span class="rvt-sr-only">, gears icon</span></a>
+</div>
 
     <h2 class="rvt-ts-sm rvt-text-bold rvt-m-top-lg rvt-p-top-lg rvt-border-top">Icons</h2>
 <ul class="ri-list rvt-m-top-sm">
