--- a/icons/link/index.html
+++ b/icons/link/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <title>Rivet icons</title>
+  <title>link | Rivet icons</title>
   <link rel="stylesheet" href="https://assets.uits.iu.edu/css/rivet/1.8.1/rivet.min.css">
   <style>
   :root {
@@ -714,8 +714,45 @@ window.customElements.define(prefix, class RivetIcon extends HTMLElement {
 
   <div class="rvt-container rvt-container--junior rvt-container--center">
     
-<h1 class="rvt-ts-46 rvt-text-bold">Rivet icons</h1>
-<p class="rvt-ts-20 rvt-m-top-none">Icons for the <a href="https://rivet.iu.edu/">Rivet Design System</a></p>
+<div class="rvt-m-bottom-lg">
+  <a href="/">Rivet icons</a>
+
+  <h1 class="rvt-ts-46 rvt-text-bold rvt-m-top-xs">link</h1>
+  <rvt-icon icon="link"></rvt-icon>
+
+  <h2 class="rvt-ts-sm rvt-text-bold rvt-m-top-lg">Option 1</h2>
+  <p>Use the custom element. This is essentially a shorthand for Option 2.</p>
+  
+  <pre><code class="ri-code-block">&lt;rvt-icon icon=&quot;link&quot;&gt;&lt;/rvt-icon&gt;</code></pre>
+
+  <h2 class="rvt-ts-sm rvt-text-bold rvt-m-top-lg">Option 2</h2>
+  
+  <pre><code class="ri-code-block">&lt;span class=&quot;rvt-icon rvt-icon--link&quot;&gt;
+  &lt;svg&gt;
+    &lt;use href=&quot;#rvt-icon&quot;&gt;&lt;/use&gt;
+  &lt;/svg&gt;
+&lt;/span&gt;</code></pre>
+
+  <h2 class="rvt-ts-sm rvt-text-bold rvt-m-top-lg">Option 3</h2>
+  <p></p>
+  
+  <pre><code class="ri-code-block">&lt;span class=&quot;rvt-icon&quot;&gt;
+  &lt;svg&gt;
+    &lt;use href=&quot;#rvt-icon-link&quot;&gt;&lt;/use&gt;
+  &lt;/svg&gt;
+&lt;/span&gt;</code></pre>
+
+  <h2 class="rvt-ts-sm rvt-text-bold rvt-m-top-lg">Option 4</h2>
+  <p>Copy or download the SVG.</p>
+  <pre><code class="ri-code-block">&lt;svg xmlns=&quot;http://www.w3.org/2000/svg&quot; width=&quot;16&quot; height=&quot;16&quot; viewBox=&quot;0 0 16 16&quot;&gt;
+  &lt;g fill=&quot;currentColor&quot;&gt;
+    &lt;path d=&quot;M6.66,10.09a1.09,1.09,0,0,1-.82-.35L4.68,8.58a2.26,2.26,0,0,1,0-3.25L9.32.7A2.29,2.29,0,0,1,11,0a2.25,2.25,0,0,1,1.62.7l2.67,2.66a2.26,2.26,0,0,1,0,3.25l-.82.81A1.15,1.15,0,1,1,12.8,5.8L13.61,5,11,2.32,6.31,7,7.47,8.12a1.12,1.12,0,0,1,0,1.62A1.26,1.26,0,0,1,6.66,10.09Z&quot;/&gt;
+    &lt;path d=&quot;M5,16a2.25,2.25,0,0,1-1.62-.7L.74,12.52A2,2,0,0,1,.05,10.9,2.28,2.28,0,0,1,.74,9.28l.81-.82a1.14,1.14,0,0,1,1.63,0,1.14,1.14,0,0,1,0,1.63l-.81.81,2.55,2.78L9.55,9,8.4,7.88a1.11,1.11,0,0,1,0-1.62,1.12,1.12,0,0,1,1.62,0l1.16,1.16A2.28,2.28,0,0,1,11.87,9a2.32,2.32,0,0,1-.69,1.63L6.42,15.42A1.72,1.72,0,0,1,5,16Z&quot;/&gt;
+  &lt;/g&gt;
+&lt;/svg&gt;
+</code></pre>
+  <a class="button button--secondary" download href="icons/rvt-icon-link.svg">Download SVG<span class="rvt-sr-only">, link icon</span></a>
+</div>
 
     <h2 class="rvt-ts-sm rvt-text-bold rvt-m-top-lg rvt-p-top-lg rvt-border-top">Icons</h2>
 <ul class="ri-list rvt-m-top-sm">
